PPXDCS-174 Add a filter for agents in logs
Add task select
